# jax-growing-ncas

./: hello.py  pyproject.toml
scripts/: emojis.py  evolve_nca.py  generate_geometric.py  train_goal_nca.py  train_nca.py
src/: utils.py
src/dataset/: emoji.py
src/model/: img_nca.py  nca.py
src/nn/: ca.py  morphogens.py  perception.py  seeding.py  update.py
