[project]
name = "jax-growing-ncas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "equinox>=0.13.0",
    "evosax>=0.2.0",
    "jax>=0.7.0; sys_platform == 'darwin'",
    "jax-dataloader>=0.1.3",
    "jax[cuda12]>=0.7.0; sys_platform == 'linux'",
    "matplotlib>=3.10.3",
    "optax>=0.2.5",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "tqdm>=4.67.1",
]
